ag- Add the old content from Home page tab

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,9 @@
 <h1>Home Page</h1>
 
-We need to at the very least get the source from the original page and migrate it here.
+<h1 style="text-align: center;"><strong><span style="color: #000000;">关于大同</span></strong></h1>
+<p><span style="color: #000000;">大同学社是伯克利第一个以中国和东亚为研究方向的本科学生组织，为所有对社会科学感兴趣的同学提供一片自由探讨的净土。上承《礼记》“天下大同”的理想憧憬，大同学社旨在伯克利开放多元的环境中寻求社会科学学术研究之大同，给予社会学科应有的重视。</span></p>
+<p><span style="color: #000000;">加州伯克利大学在社科人文领域有得天独厚的地缘优势与悠久的学术传统，如今更拥有一批享誉国际的专家学者在校内从事研究或任教。其广度深度并具的学术强项几乎囊括绝大部分社科人文专业：历史、政治、经济、金融、语言、文学、宗教、哲学、社会学、艺术、古典修辞等。大同学社希望充分利用伯克利已有的顶尖学术资源，去为对社科人文怀抱热忱之心者搭建一个高质量的学术分享交流平台。一切为了思想、文化与研究的升华。</span></p>
+<p><span style="color: #000000;">昔者为成其大，太山不让砺石，江海不辞小流；今而大同，广征同识之士，询于诸子，求同而存异。得从大同所游者，以为一家，欲其长久，当一视同仁，唯才是举。</span></p>
 
-<h3>About Da-Tong</h3>
-Placeholder text
+<h1 style = "text-align: center;">About Da-Tong</h1>
+<p><span style="color: #000000;">Datong Society of China Studies at Berkeley is a cultural and academic group that aims to provide a communication and research platform for students who are interested in both historical and social issues of China and East Asia. Throughout the semester, we will lead and organize seminars, film nights, and reading sessions to discuss and analyze popular or controversial topics of China studies. We strive to utilize the knowledge and resources on campus to help students have a better understanding of culture, politics, and history of China.</span></p>
