--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,7 @@
       <li><%= link_to 'People', people_path %></li>
       <li><%= link_to 'Resources', resources_path %></li>
       <li><%= link_to 'Events', events_path %></li>
-      <li><a href="/">Contact Us</a></li>
+      <li><%= link_to 'Contact Us', contact_us_path %></li>
       <% if user_signed_in? %>
           <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
           <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
