--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,8 +5,13 @@
       <li><a href="/">Home</a></li>
       <li><a href="/people">People</a></li>
       <li><a href="/">Contact Us</a></li>
-      <li><a href = <%=new_user_registration_path%>>Sign Up</a></li>
-      <li><a href = <%=new_user_session_path%>>Sign In</a></li>
-    </ul>
+      <% if user_signed_in? %>
+          Logged in as <strong><%= current_user.email %></strong>.
+          <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
+          <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
+      <% else %>
+          <li><%= link_to "Sign Up", new_user_registration_path %></li>
+          <li><%= link_to "Sign In", new_user_session_path %></li>
+      <% end %>   </ul>
   </div>
 </nav>
