--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,8 +2,9 @@
   <div class="nav-wrapper">
     <a href="" class="brand-logo">Datong</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a href="/">Home</a></li>
-      <li><a href="/people">People</a></li>
+      <li><%= link_to 'Home', root_path %></li>
+      <li><%= link_to 'People', people_path %></li>
+      <li><%= link_to 'Events', events_path %></li>
       <li><a href="/">Contact Us</a></li>
       <% if user_signed_in? %>
           Logged in as <strong><%= current_user.email %></strong>.
