--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,6 +5,7 @@
     <ul id="mobile-menu" class="side-nav">
       <li><%= link_to 'Home', root_path %></li>
       <li><%= link_to 'People', people_path %></li>
+      <li><%= link_to 'Resources', resources_path %></li>
       <li><%= link_to 'Events', events_path %></li>
       <li><a href="/">Contact Us</a></li>
       <% if user_signed_in? %>
