--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,8 +12,14 @@
  *
  */
 
-@import "materialize";
+@import "materialize/components/color";
+$beaver: #9A846D;
+$bison-hide: #B8A692;
+$primary-color: $beaver !default;
+$secondary-color: $bison-hide !default;
+@import 'materialize';
+@import "materialize/extras/nouislider";
 
-nav {
-  background-color: #9A846D;
+.nav-wrapper {
+  padding: 0em 1em 0em 1em;
 }
