--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,7 @@
 <nav>
   <div class="nav-wrapper">
-    <a href="" class="brand-logo">Datong</a>
+    <a href="#!" class="brand-logo">Datong</a>
+    <a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><%= link_to 'Home', root_path %></li>
       <li><%= link_to 'People', people_path %></li>
@@ -13,6 +14,21 @@
       <% else %>
           <li><%= link_to "Sign Up", new_user_registration_path %></li>
           <li><%= link_to "Sign In", new_user_session_path %></li>
-      <% end %>   </ul>
+      <% end %>
+    </ul>
+    <ul id="mobile-menu" class="side-nav">
+      <li><%= link_to 'Home', root_path %></li>
+      <li><%= link_to 'People', people_path %></li>
+      <li><%= link_to 'Events', events_path %></li>
+      <li><a href="/">Contact Us</a></li>
+      <% if user_signed_in? %>
+          Logged in as <strong><%= current_user.email %></strong>.
+          <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
+          <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
+      <% else %>
+          <li><%= link_to "Sign Up", new_user_registration_path %></li>
+          <li><%= link_to "Sign In", new_user_session_path %></li>
+      <% end %>
+    </ul>
   </div>
 </nav>
