--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,9 +8,9 @@
       <li><%= link_to 'Events', events_path %></li>
       <li><a href="/">Contact Us</a></li>
       <% if user_signed_in? %>
-          Logged in as <strong><%= current_user.email %></strong>.
           <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
           <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
+          <li><div class="navbar-non-link">Logged in as <strong><%= current_user.email %></strong>.</div></li>
       <% else %>
           <li><%= link_to "Sign Up", new_user_registration_path %></li>
           <li><%= link_to "Sign In", new_user_session_path %></li>
@@ -22,9 +22,9 @@
       <li><%= link_to 'Events', events_path %></li>
       <li><a href="/">Contact Us</a></li>
       <% if user_signed_in? %>
-          Logged in as <strong><%= current_user.email %></strong>.
           <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
           <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
+          <li><div class="navbar-non-link">Logged in as <strong><%= current_user.email %></strong>.</div></li>
       <% else %>
           <li><%= link_to "Sign Up", new_user_registration_path %></li>
           <li><%= link_to "Sign In", new_user_session_path %></li>
