--- a/app/views/past_events/new.html.erb
+++ b/app/views/past_events/new.html.erb
@@ -1,32 +1,12 @@
 <h2>Add Event</h2>
 
-<%= form_for(resource, as: resource_name, url: past_events_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+<%= form_for @past_event, url: {action: "create"}, html: {class: "nifty_form"} do |f| %>
+  Title: <%= f.text_field :title %>
+  Description: <%= f.text_area :description, size: "60x12" %>
+  Date: <%= f.date_select :date, :order => [:day, :month, :year] %>
+  Time: <%= f.time_select :time %>
   
-  <div class="field">
-    <%= f.label :title %><br />
-    <%= f.title_field :title, autofocus: true %>
-  </div>
-  
-  <div class="field">
-    <%= select_date Date.today %>
-    <%= f.label :date %><br />
-    <%= f.date_field :date %>
-  </div>
+  <%= f.submit "Create" %>
 
-  <div class="field">
-    <%= f.label :time %><br />
-    <%= f.date_field :time
-  </div>
-
-  <div class="field">
-    <%= f.label :description %><br />
-    <%= f.description_field :description %>
-  </div>
-  
-  <div class="actions">
-    <%= f.submit "Add Event" %>
-  </div>
-  
 <% end %>
 
