--- a/app/views/past_events/new.html.erb
+++ b/app/views/past_events/new.html.erb
@@ -3,8 +3,8 @@
 <%= form_for @past_event, url: {action: "create"}, html: {class: "nifty_form"} do |f| %>
   Title: <%= f.text_field :title %>
   Description: <%= f.text_area :description, size: "60x12" %>
-  Date: <%= f.date_select :date, :order => [:day, :month, :year] %>
-  Time: <%= f.time_select :time %>
+  Date: <%= f.date_field :date, :order => [:day, :month, :year] %>
+  Time: <%= f.time_field :time %>
   
   <%= f.submit "Create" %>
 
