--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,7 +10,10 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ *= require fullcalendar
  */
+
+
 
 @import "materialize/components/color";
 $beaver: #9A846D;
@@ -19,6 +22,7 @@ $primary-color: $beaver !default;
 $secondary-color: $bison-hide !default;
 @import 'materialize';
 @import "materialize/extras/nouislider";
+
 
 .nav-wrapper {
   padding: 0em 1em 0em 1em;
