ag-Displaying events and times on the calendar

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,7 +3,13 @@
 <h1>Upcoming Events</h1>
 
 <!--display calendar-->
-<script>$( document ).ready(function(){$('#calendar').fullCalendar({});});</script>
+<script>
+  $( document ).ready(function()
+    {$('#calendar').fullCalendar({
+    events: '/events.json'
+    });
+  });
+</script>
 <div id="calendar"></div>
 
 
