--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -6,12 +6,21 @@
 <script>
   $( document ).ready(function()
     {$('#calendar').fullCalendar({
-    events: '/events.json'
+    events: '/events.json',
+    header: {
+      left: 'today prev,next',
+      center: 'title',
+      right: 'month,agendaWeek,agendaDay,list'
+    },
+    selectable: true,
+    selectHelper: true,
+    eventLimit: true
     });
   });
 </script>
-<div id="calendar"></div>
 
+<div id="calendar"></div>
+<%= link_to 'New Event', new_event_path %>
 
 <table>
   <thead>
@@ -42,7 +51,7 @@
 
 <br>
 
-<%= link_to 'New Event', new_event_path %>
+
 
 
 
