ag-Added the ability to pick dates and times for events

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -12,9 +12,11 @@
       center: 'title',
       right: 'month,agendaWeek,agendaDay,list'
     },
+    defaultView: 'agendaWeek',
     selectable: true,
     selectHelper: true,
-    eventLimit: true
+    eventLimit: true,
+    editable: true
     });
   });
 </script>
@@ -50,8 +52,3 @@
 </table>
 
 <br>
-
-
-
-
-
