--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -21,11 +21,11 @@
   </div>
   <div class="field">
     <%= f.label :start_time %><br>
-    <%= f.datetime_select :start_time %>
+    <%= f.datetime_local_field :start_time %>
   </div>
   <div class="field">
     <%= f.label :end_time %><br>
-    <%= f.datetime_select :end_time %>
+    <%= f.datetime_local_field :end_time %>
   </div>
   <div class="actions">
     <%= f.submit %>
