--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,9 @@
     <ul id="mobile-menu" class="side-nav">
       <li><%= link_to 'Home', root_path %></li>
       <li><%= link_to 'People', people_path %></li>
-      <li><%= link_to 'Resources', resources_path %></li>
+      <% if user_signed_in? %>
+          <li><%= link_to 'Resources', resources_path %></li>
+      <% end %>
       <li><%= link_to 'Events', events_path %></li>
       <li><%= link_to 'Contact Us', contact_us_path %></li>
       <% if user_signed_in? %>
