jp - refactor static pages out of application_controller and into pages_controller

--- a/app/views/pages/about_us.html.erb
+++ b/app/views/pages/about_us.html.erb
@@ -1,4 +1,4 @@
-<h1>Home Page</h1>
+<h1>About Us</h1>
 
 <h3 style="text-align: center;"><span style="color: #000000;">关于大同</span></h3>
 <p><span style="color: #000000;">大同学社是伯克利第一个以中国和东亚为研究方向的本科学生组织，为所有对社会科学感兴趣的同学提供一片自由探讨的净土。上承《礼记》“天下大同”的理想憧憬，大同学社旨在伯克利开放多元的环境中寻求社会科学学术研究之大同，给予社会学科应有的重视。</span></p>
