--- a/app/views/pages/contact_us.html.erb
+++ b/app/views/pages/contact_us.html.erb
@@ -1,10 +1,27 @@
-<h1>Contact Us</h1>
+<h2>Contact Us</h2>
 
-<div class="entry-content">
-		<p>Facebook Page:</p>
-<p style="text-align: left;"><a href="https://www.facebook.com/DaTongSociety">Da-Tong Society of China Studies</a></p>
-<p>&nbsp;</p>
-<p>WeChat Official Account:</p>
-<p>大同学社</p>
-<p><img class="alignnone  wp-image-80" src="https://www.ocf.berkeley.edu/~datong/wp-content/uploads/2016/01/qrcode_for_gh_b6dc862489f8_430-300x300.jpg" alt="qrcode_for_gh_b6dc862489f8_430" width="114" height="114" srcset="https://www.ocf.berkeley.edu/~datong/wp-content/uploads/2016/01/qrcode_for_gh_b6dc862489f8_430-300x300.jpg 300w, https://www.ocf.berkeley.edu/~datong/wp-content/uploads/2016/01/qrcode_for_gh_b6dc862489f8_430-150x150.jpg 150w, https://www.ocf.berkeley.edu/~datong/wp-content/uploads/2016/01/qrcode_for_gh_b6dc862489f8_430.jpg 430w" sizes="(max-width: 114px) 100vw, 114px" /></p>
-			</div><!-- .entry-content -->
+<div class="social-media">
+  <ul>
+    <li>
+      <a href="https://www.facebook.com/DaTongSociety" target="_blank" id="facebook">
+        <i class="fa fa-facebook-square"></i>
+      </a>
+    </li>
+    <li>
+      <a href="#wechatModal" class="modal-trigger" id="wechat">
+        <i class="fa fa-wechat"></i>
+      </a>
+    </li>
+  </ul>
+</div>
+
+<div id="wechatModal" class="modal modal-fixed-footer">
+  <div class="modal-content">
+    <h6>Use the WeChat app to scan the QR code!</h6>
+    <p>Official account name: 大同学社</p>
+    <%= image_tag 'datong_wechat_qr_code.jpeg' %>
+  </div>
+  <div class="modal-footer">
+    <a href="#!" class="modal-action modal-close waves-effect btn">Done</a>
+  </div>
+</div>
