--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@
 @import "materialize/components/color";
 $beaver: #9A846D;
 $bison-hide: #B8A692;
+$coffee: #78644F;
 $primary-color: $beaver !default;
 $secondary-color: $bison-hide !default;
 $error-color: #EED6D6;
@@ -103,3 +104,42 @@ html{
   background-color: $danger-color;
 }
 
+.social-media {
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    text-align: center;
+  }
+
+  li {
+    display: inline;
+  }
+
+  li a {
+    display: inline-block;
+    text-align: center;
+    padding: 3em;
+    text-decoration: none;
+  }
+
+  i {
+    color: $primary-color;
+    font-size: 10em;
+  }
+
+  i:hover {
+    color: $secondary-color;
+    cursor: pointer;
+  }
+}
+
+#wechatModal {
+  .modal-content {
+    text-align: center;
+  }
+  .modal-footer {
+    text-align: right;
+  }
+}
