ss - Create view for general Core Members page, add is_core_member column, view for editing core members

--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -6,7 +6,7 @@
 <br />
 
 <table class = "table table-bordered table-striped">
-   <thead>.
+   <thead>
       <tr>
          <th>Title</th>
          <th>Download Link</th>
