--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,7 +4,7 @@
     <a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
     <ul id="mobile-menu" class="side-nav">
       <li><%= link_to 'About Us', about_us_path %></li>
-      <li><%= link_to 'People', people_path %></li>
+      <li><%= link_to 'People', core_members_index_path %></li>
       <% if user_signed_in? %>
           <li><%= link_to 'Resources', resources_path %></li>
       <% end %>
