--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -143,3 +143,45 @@ html{
     text-align: right;
   }
 }
+
+.column-left{
+  float: left; width: 33%;
+}
+
+.column-right{
+  float: right; width: 33%;
+}
+
+.column-center{
+  display: inline-block; width: 33%;
+}
+
+#bottom-bar {
+  position: fixed;
+  z-index: 100;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height:40px;
+  background-color: $secondary-color;
+  color: white; text-align:center;
+  line-height:40px;
+}
+
+#bottom-bar-text {
+  display:inline-block;
+  vertical-align:middle;
+  line-height:normal;
+}
+
+.container{
+  margin-top: 10px;
+}
+
+.column-left{ float: left; width: 35%; padding-left: 10%;margin-left: 0px;}
+.column-right{ float: right; width: 35%; padding-left: 5%;}
+.column-center{ display: inline-block; width: 30%; padding-left: 5%;}
+.column-text{margin-left:50px; padding-right: 5px;}
+#bottom-bar {position: fixed; z-index: 100; bottom: 0; left: 0; width: 100%; height:40px; background-color: $secondary-color; color: white; text-align:center; line-height:40px;}
+#bottom-bar-text{display:inline-block; vertical-align:middle; line-height:normal;}
+.column-container{margin-top: 10px;padding-left:0%; margin-left: 0px;margin-right:0px;}
