--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,35 @@
-jumbotron
+<center><h1> 大同学社</h1><h1> Da-Tong Society of China Studies</h1></center>
+<center>
+           <div id="slider">
+                <img class="mainpictures" src="https://www.ocf.berkeley.edu/~datong/wp-content/uploads/2016/01/1.pic_-1024x310.png" width="1024" height="310" alt="Datong">
+           </div>
+</center>
+<script>
+   var slideIndex = 0;
+carousel();
+function carousel() {
+    var i;
+    var x = document.getElementsByClassName("mainpictures");
+    for (i = 0; i < x.length; i++) {
+      x[i].style.display = "none"; 
+    }
+    slideIndex++;
+    if (slideIndex > x.length) {slideIndex = 1} 
+    x[slideIndex-1].style.display = "block"; 
+    setTimeout(carousel, 4000); // Change image every 2 seconds
+} 
+</script>
+
+
+
+
+<div class="column-container">
+<div class="column-left"><span class="column-text"><h4>Passion:</h4><h4> 积极的学术热情，<br>无私的学术精神</h4> </span></div>
+<div class="column-center"> <span class="column-text"><h4>Integrity: </h4><h4>优良的学术品质，<br>独立的学术能力</h4></span></div>
+<div class="column-right"><span class="column-text"><h4>Open-mindedness:</h4><h4> 持重的学术态度，<br>包容的学术胸怀</h4></span></div>
+</div>
+
+
+<div id="bottom-bar">
+    <span id="bottom-bar-text">Hosted by OCF. Sponsored by <a href=http://ieas.berkeley.edu/ccs/>Center for Chinese Studies</a></span>
+</div>
