ag-fixed merge conflicts

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -23,7 +23,7 @@
 <div id="calendar"></div>
 
 
-<% if @core_member %>
+<% if @event_admin %>
   <%= link_to 'New Event', new_event_path %>
 <% end %>
 
