--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, required: true %>
   </div>
   <div class="field">
     <%= f.label :description %><br>
@@ -21,11 +21,11 @@
   </div>
   <div class="field">
     <%= f.label :start_time %><br>
-    <%= f.datetime_local_field :start_time %>
+    <%= f.datetime_local_field :start_time, required: true %>
   </div>
   <div class="field">
     <%= f.label :end_time %><br>
-    <%= f.datetime_local_field :end_time %>
+    <%= f.datetime_local_field :end_time, required: true %>
   </div>
   <div class="actions">
     <%= f.submit %>
