ss - Add link for editing core members, only accessible by account admins

--- a/app/views/core_members/index.html.erb
+++ b/app/views/core_members/index.html.erb
@@ -1,5 +1,7 @@
 <h2>Core Members</h2>
-
+<% if @is_account_admin %>
+  <%= link_to "Edit", edit_multiple_core_members_path %>
+<% end %>
 <table id="core_members">
   <thead>
   <tr>
