ss - Update core member cucumber scenario and view

--- a/app/views/core_members/index.html.erb
+++ b/app/views/core_members/index.html.erb
@@ -4,10 +4,7 @@
   <thead>
   <tr>
     <th>
-      Name
-    </th>
-    <th>
-      Email
+      Current semester
     </th>
   </tr>
   </thead>
@@ -17,8 +14,24 @@
   <% else %>
       <% @core_members.each do |core_member| %>
           <tr>
-            <td><%= core_member.fullname %></td>
-            <td><%= core_member.email %></td>
+            <td>
+              <div class="row">
+                <div class="col s12 m10">
+                  <div class="card horizontal small">
+                    <div class="card-image">
+                      <%= image_tag(core_member.img_url) %>
+                      <span class="card-title" style="background-color:rgba(0, 0, 0, 0.5);">
+                        <%= core_member.fullname %>
+                      </span>
+                    </div>
+                    <div class="card-content">
+                      <div class="core-member-position"></div>
+                      <div class="core-member-blurb">Hello! <%= core_member.blurb %></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </td>
           </tr>
       <% end %>
   <% end %>
