--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -42,7 +42,17 @@
     <%= f.password_field :current_password, autocomplete: "off" %>
   </div>
 
-  <div class="actions">
+  <div class="field">
+    <%= f.label :img_url %><br />
+    <%= f.text_field :img_url, required: false %>
+  </div>
+
+  <div class="field">
+    <%= f.label :blurb %><br />
+    <%= f.text_area :blurb, required: false %>
+  </div>
+
+    <div class="actions">
     <%= f.submit "Update" %>
   </div>
 <% end %>
