ss - Add proportioning for Core Members card

--- a/app/views/core_members/index.html.erb
+++ b/app/views/core_members/index.html.erb
@@ -26,9 +26,9 @@
                         <%= core_member.fullname %>
                       </span>
                     </div>
-                    <div class="card-content">
+                    <div class="card-content col s10 m8">
                       <div class="core-member-position"></div>
-                      <div class="core-member-blurb">Hello! <%= core_member.blurb %></div>
+                      <div class="core-member-blurb"><%= core_member.blurb %></div>
                     </div>
                   </div>
                 </div>
