--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -26,7 +26,9 @@
          <tr>
             <td><%= resource.title %></td>
             <td><%= link_to "Download Resource", resource.attachment_url %></td>
-            <td><%= button_to "Delete",  resource, method: :delete, class: "btn btn-danger", confirm: "Are you sure that you wish to delete #{resource.title}?" %></td>
+            <% if @core_member %>
+              <td><%= button_to "Delete",  resource, method: :delete, class: "btn btn-danger", confirm: "Are you sure that you wish to delete #{resource.title}?" %></td>
+            <%end%>
          </tr>
          
       <% end %>
