--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,18 +1,13 @@
 <head>  
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<ul id="events_dropdown" class="dropdown-content">
-  <li><%= link_to 'Upcoming Events', events_path %></li>
-  <li class="divider"></li>
-  <li><%= link_to 'Past Events', past_events_path %></li>
-</ul>
 <ul id="account_dropdown" class="dropdown-content">
   <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
   <li class="divider"></li>
   <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
 </ul>
 <ul id="people_dropdown" class="dropdown-content">
-  <li><%= link_to 'Core Memebers', core_members_path %></li>
+  <li><%= link_to 'Core Members', core_members_path %></li>
   <li class="divider"></li>
   <li><%= link_to "Edit Core Members", edit_multiple_core_members_path  %></li>
 </ul>
@@ -23,17 +18,17 @@
     <ul id="mobile-menu" class="side-nav">
       <li><%= link_to 'About Us', about_us_path %></li>
       <% if user_signed_in? and current_user.is_account_admin %>
-        <li><a class="dropdown-button" data-beloworigin="true" data-activates="people_dropdown" data-hover="hover">People</a></li>
+        <li><a class="dropdown-button" data-beloworigin="true" data-activates="people_dropdown">People</a></li>
       <% else %>
         <li><%= link_to 'People', core_members_index_path %></li>
       <% end %>
       <% if user_signed_in? %>
           <li><%= link_to 'Resources', resources_path %></li>
       <% end %>
-      <li><a class="dropdown-button" data-beloworigin="true" data-activates="events_dropdown" data-hover="hover">Events</a></li>
+      <li><%= link_to 'Events', events_path %></li>
       <li><%= link_to 'Contact', contact_us_path %></li>
       <% if user_signed_in? %>
-          <li><a class="dropdown-button" data-beloworigin="true" data-activates="account_dropdown" data-hover="hover">Hello, <strong><%=current_user.fname%></strong><i class="material-icons right">arrow_drop_down</i></a></li>
+          <li><a class="dropdown-button" data-beloworigin="true" data-activates="account_dropdown">Hello, <strong><%=current_user.fname%><i class="material-icons right">arrow_drop_down</i></strong></a></li>
       <% else %>
           <li><%= link_to "Sign Up", new_user_registration_path %></li>
           <li><%= link_to "Sign In", new_user_session_path %></li>
