--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,8 +16,8 @@
 
 
 @import "materialize/components/color";
-$beaver: #9A846D;
-$bison-hide: #B8A692;
+$beaver: #23284c;
+$bison-hide: #23284c;
 $coffee: #78644F;
 $primary-color: $beaver !default;
 $secondary-color: $bison-hide !default;
