--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,3 @@
-<center><h1> 大同学社</h1><h1> Da-Tong Society of China Studies</h1></center>
 <center>
            <div id="slider">
                 <img class="mainpictures" src="https://www.ocf.berkeley.edu/~datong/wp-content/uploads/2016/01/1.pic_-1024x310.png" width="1024" height="310" alt="Datong">
@@ -17,8 +16,25 @@ function carousel() {
     if (slideIndex > x.length) {slideIndex = 1} 
     x[slideIndex-1].style.display = "block"; 
     setTimeout(carousel, 4000); // Change image every 2 seconds
-} 
+}
+
+   var images = [
+       "https://upload.wikimedia.org/wikipedia/commons/a/a2/PudongSkyline-pjt.jpg",
+       "http://image.insider-journeys.com/overview/china.jpg",
+       "https://4.bp.blogspot.com/-8irF_T45mks/VGG8PnGJ2-I/AAAAAAABVVw/NddZWUZOy5c/s0/Sunset%2BNational%2BGrand%2BTheatre%2BUHD.jpg",
+       "https://upload.wikimedia.org/wikipedia/commons/e/ef/The_Forbidden_City_-_View_from_Coal_Hill.jpg"
+   ]
+   var imageHead = document.getElementById("nav-bar");
+   var i = 0;
+   setInterval(function() {
+       imageHead.style.backgroundImage = "url(" + images[i] + ")";
+       i = i + 1;
+       if (i == images.length) {
+           i =  0;
+       }
+   }, 5000);
 </script>
+
 
 
 
