--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,8 @@
-<nav>
+<nav id="nav-bar">
+
   <div class="nav-wrapper">
     <%= link_to 'Datong', root_path, class: 'brand-logo' %>
-    <a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
+    <div><a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a></div>
     <div class="nav-pages">
       <ul id="mobile-menu" class="side-nav">
         <li><%= link_to 'About Us', about_us_path %></li>
@@ -22,4 +23,6 @@
       </ul>
     </div>
   </div>
+
+  <div class="vertical-center"><center><h1 style="margin-top: 0px"> 大同学社</h1><h1> Da-Tong Society of China Studies</h1></center></div>
 </nav>
