--- a/app/views/core_members/index.html.erb
+++ b/app/views/core_members/index.html.erb
@@ -11,6 +11,8 @@
   </tr>
   </thead>
   <tbody>
+  <h4>Profile Saved</h4>
+  <button type="button" id="update">Update</button>
   <% if @core_members.empty? %>
           <tr><td>It looks like there are no Core Members yet!</td></tr>
   <% else %>
